<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_navigation_drawer_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />
        <item
            android:id="@+id/item_navigation_drawer_book"
            android:icon="@drawable/ic_action_book"
            android:title="@string/lastquery" />
        <item
            android:id="@+id/item_navigation_drawer_book2"
            android:icon="@drawable/ic_action_book"
            android:title="@string/history" />
        <item
            android:id="@+id/item_navigation_drawer_mymaps"
            android:icon="@drawable/ic_action_map"
            android:title="@string/maps" />
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/item_navigation_drawer_help"
                android:icon="@drawable/ic_action_help"
                android:title="@string/help" />
            <item
                android:id="@+id/item_navigation_drawer_about"
                android:icon="@drawable/ic_action_info_outline"
                android:title="@string/about" />
        </menu>
    </item>

</menu>